<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/child_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="24sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/motto"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Joke Jake Jake" />

                <TextView
                    android:id="@+id/motto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="This is sample." />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/child_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/child_1">

                <TextView
                    android:id="@+id/subscribe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/subscribe_with_num" />

                <TextView
                    android:id="@+id/fans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/fans_with_num" />

                <TextView
                    android:id="@+id/ledou"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/ledou_with_num" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/child_3"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/child_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tiezi"
                        style="@style/Widget.Material3.Button.TextButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tiezi"
                        app:icon="@drawable/ic_baseline_mode_edit_24"
                        app:iconGravity="top"
                        app:iconSize="24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/comment"
                        style="@style/Widget.Material3.Button.TextButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/comment"
                        app:icon="@drawable/ic_baseline_reply_24"
                        app:iconGravity="top"
                        app:iconSize="24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/liked"
                        style="@style/Widget.Material3.Button.TextButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/liked"
                        app:icon="@drawable/ic_baseline_thumb_up_alt_24"
                        app:iconGravity="top"
                        app:iconSize="24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fav"
                        style="@style/Widget.Material3.Button.TextButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/favorite"
                        app:icon="@drawable/ic_baseline_favorite_24"
                        app:iconGravity="top"
                        app:iconSize="24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/child_4"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/child_3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/give_me_thumb_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_baseline_thumb_up_alt_24"
                            android:contentDescription="@null" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/give_me_thumb_up" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_baseline_settings_24"
                            android:contentDescription="@null" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/settings" />

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>